Revision history for Test-DiagINC

{{$NEXT}}

    - Minimize amount of reported modules: anything Test::DiagINC loads
      in order to compile the report is excluded
    - No longr chdir() during the local-library heuristic
    - No non-core runtime dependencies, add 5.6 support

0.002     2014-02-04 22:17:58-05:00 America/New_York

    [CHANGED]

    - Will not report modules loaded from below the current directory
      (suggested by Peter Rabbitson)

0.001     2014-02-04 15:12:52-05:00 America/New_York

    - First release
