@@ -7,7 +7,7 @@ on 'test' => sub {
   requires "ExtUtils::MakeMaker" => "0";
   requires "File::Spec::Functions" => "0";
   requires "List::Util" => "0";
-  requires "Test::More" => "0.96";
+  requires "Test::More" => "0";
   requires "version" => "0";
 };
 
