@@ -1,9 +1,14 @@
 use strict;
 use warnings;
-use Test::More 0.96;
+use Test::More;
 use Capture::Tiny 0.21 qw/capture/;
 
-for my $file (qw/fails.t dies.t/) {
+my @testfiles = qw/fails.t dies.t/;
+push @testfiles, 'fails_in_end.t' unless $] < 5.008;
+
+plan tests => @testfiles * 3;
+
+for my $file (@testfiles) {
     $ENV{AUTOMATED_TESTING} = 1;
     my ( $stdout, $stderr ) = capture {
         system( $^X, "examples/$file" );
@@ -14,7 +19,6 @@ for my $file (qw/fails.t dies.t/) {
     unlike( $stderr, qr/Foo/, "$file: Did not see local module Foo in module list", );
 }
 
-done_testing;
 # COPYRIGHT
 
 # vim: ts=4 sts=4 sw=4 et:
